# datacitekit

./: .gitignore  LICENSE  README.md  extractors.py  pyproject.toml  pytest.ini  related_works.py  reports.py  requirements.txt  searchers.py
examples/: api.py
src/datacitekit/: __init__.py  doi_relations.py  extractors.py  related_works.py  reports.py  resource_people_organization_graph.py  resource_type_graph.py  searchers.py  utils.py
tests/: test_extractors.py
