[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "datacitekit"
authors = [{name = "DataCite Engineering", email = "info@datacite.org"}]
license = {file = "LICENSE"}
classifiers = [
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3"
]
dynamic = ["version", "description"]
dependencies = ["requests", "glom"]

[project.urls]
Home = "https://datacite.org"

[tool.flit.module]
path = "src/datacitekit"
