[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "datacitekit"
authors = [{name = "DataCite Engineering", email = "info@datacite.org"}]
license = {file = "LICENSE"}
classifiers = [
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3"
]
dynamic = ["version", "description"]
dependencies = ["requests", "glom"]

[project.urls]
Home = "https://datacite.org"

[project.optional-dependencies]
test = [ "pytest"]

[tool.flit.module]
path = "src/datacitekit"

[tool.pytest.ini_options]
# Specify directories to search for tests
testpaths = "tests"

# Add any command-line options here
addopts = "--verbose"

# Specify patterns for test file names
python_files = "test_*.py"

# Specify patterns for test function and method names
python_functions = "test_*"

# Specify patterns for test class names
python_classes = "Test*"

# Configure logging
log_cli = "true"
log_cli_level = "INFO"
